Closed
Bug 392392
Opened 18 years ago
Closed 18 years ago
I've typed http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirect handing in places)
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3 alpha8
People
(Reporter: moco, Assigned: moco)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
1.65 KB,
patch
|
dietrich
:
review+
|
Details | Diff | Splinter Review |
145 bytes,
text/html
|
Details |
I enter http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirects?)
note, once bug #389491 lands, this will be a problem with the url bar autocomplete.
Assignee | ||
Comment 1•18 years ago
|
||
this is a recent regression, and appears related to bug #375777
Assignee: nobody → sspitzer
Depends on: 375777
Flags: blocking-firefox3?
Keywords: regression
Target Milestone: --- → Firefox 3 M8
Assignee | ||
Comment 2•18 years ago
|
||
> this is a recent regression, and appears related to bug #375777
after debugging, this is not a recent regression related to bug #375777.
Here's what's going on:
1) http://gmail.com is a redirect (to http://mail.google.com/mail/)
2) redirects are hidden (see this call to AddVisitChain() in http://lxr.mozilla.org/seamonkey/source/toolkit/components/places/src/nsNavHistory.cpp#3068)
3) our code in add visit will not unhide vists if they are redirects. (http://lxr.mozilla.org/seamonkey/source/toolkit/components/places/src/nsNavHistory.cpp#1871)
I can reproduce this bug with a new profile, but I could not with an existing profile because http://gmail.com was already unhidden and we won't hide somethign that is already hidden.
what's next:
1) see what fx 2 does and how it behaves.
2) we might want to make it so "typed in" visits that redirect are not dinner.
3) look into using a page url as the title when we don't have a title.
No longer depends on: 375777
Assignee | ||
Updated•18 years ago
|
Summary: I enter http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirects?) → I'ved typed http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirect handing in places)
Assignee | ||
Comment 3•18 years ago
|
||
> 1) see what fx 2 does and how it behaves
testing it out, fx 2 will not add links I click on to http://gmail.com to history, but it will add them if I type them in. I think we should make fx 3 do the same.
> 2) we might want to make it so "typed in" visits that redirect are not dinner.
dinner? I meant hidden. Sheesh, it is only 2:30 pm and I'm already thinking about food.
> 3) look into using a page url as the title when we don't have a title.
this is not necessary, we already do the right thing.
here comes a patch.
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•18 years ago
|
||
Attachment #277442 -
Flags: review?(dietrich)
Updated•18 years ago
|
Attachment #277442 -
Flags: review?(dietrich) → review+
Assignee | ||
Updated•18 years ago
|
Summary: I'ved typed http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirect handing in places) → I've typed http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirect handing in places)
Assignee | ||
Comment 5•18 years ago
|
||
fixed.
Checking in nsNavHistory.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp
new revision: 1.155; previous revision: 1.154
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 6•18 years ago
|
||
Assignee | ||
Comment 7•18 years ago
|
||
for litmus:
1) create a new profile
2) load https://bugzilla.mozilla.org/attachment.cgi?id=277451
3) click on the link, sign into gmail
4) load https://bugzilla.mozilla.org/attachment.cgi?id=277451 again, click on the link again
you *should not* see "gmail.com" (http://gmail.com) in the history sidebar, history menu, or url bar autocomplete
now, type http://gmail.com in the url bar.
now you *should* see "gmail.com" (http://gmail.com) in the history sidebar, history menu, or url bar autocomplete
Flags: in-testsuite-
Flags: in-litmus?
Comment 8•18 years ago
|
||
Booyah.
http://litmus.mozilla.org/show_test.cgi?id=4582
in-litmus+ (you've been apprised).
Flags: in-litmus? → in-litmus+
Updated•18 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Comment 9•18 years ago
|
||
Verified FIXED using the steps to reproduce in comment 7 with Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a8pre) Gecko/2007090604 Minefield/3.0a8pre
Status: RESOLVED → VERIFIED
Comment 10•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•