fix for bug #392392: I've typed http://gmail.com in the urlbar, but I don't see that in the history sidebar or history menu (due to redirect handing in places) r=dietrich